feat: implement refresh endpoint (#5)
